// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDeterministicAnalysis snapshots > clean is unchanged 1`] = `
{
  "issues": [],
  "modules": [
    {
      "files": 8,
      "name": "golden-project",
      "risk": "ok",
    },
  ],
  "projectName": "golden-project",
  "risk_score": 0,
  "simulation": [
    {
      "event": "System initialized — no risk signals detected by static analysis.",
      "time": "T+0s",
      "type": "normal",
    },
    {
      "event": "Operating within expected parameters.",
      "time": "T+5m",
      "type": "normal",
    },
    {
      "event": "No anomalies observed during sustained operation.",
      "time": "T+1h",
      "type": "normal",
    },
  ],
  "stack": [
    "React",
    "Node.js",
  ],
  "summary": "Static analysis of golden-project (8 files, 50.0 KB) found no risk signals. The codebase is clean of obvious credential leaks, dynamic-code-execution paths, and plaintext-HTTP usage. Static analysis cannot verify runtime behavior, business-logic correctness, or architectural quality.",
}
`;

exports[`generateDeterministicAnalysis snapshots > many-secrets-critical is unchanged 1`] = `
{
  "issues": [
    {
      "description": "Hardcoded credentials detected in 4 locations: golden-project/a.js:1, golden-project/b.js:1, golden-project/c.js:1, ....",
      "impact": "Credentials in source can leak through git history, public mirrors, logs, or build artifacts. Rotate any exposed values and move them to environment variables or a secrets manager.",
      "severity": "critical",
      "type": "security",
    },
  ],
  "modules": [
    {
      "files": 8,
      "name": "golden-project",
      "risk": "danger",
    },
  ],
  "projectName": "golden-project",
  "risk_score": 60,
  "simulation": [
    {
      "event": "System initialized.",
      "time": "T+0s",
      "type": "normal",
    },
    {
      "event": "Credential exposure risk active — hardcoded secrets remain reachable through source artifacts.",
      "time": "T+5m",
      "type": "warn",
    },
    {
      "event": "A repository or log leak would immediately expose production credentials.",
      "time": "T+1h",
      "type": "danger",
    },
    {
      "event": "Without remediation, the combined risks above materially raise the chance of a security incident in production.",
      "time": "T+24h",
      "type": "danger",
    },
  ],
  "stack": [
    "React",
    "Node.js",
  ],
  "summary": "Static analysis of golden-project (8 files, 50.0 KB) detected 4 risk signals (hardcoded_secret), indicating moderate deployment risk. Address the issues below before promoting this build.",
}
`;

exports[`generateDeterministicAnalysis snapshots > mixed-three-categories is unchanged 1`] = `
{
  "issues": [
    {
      "description": "Hardcoded credential detected in 1 location: golden-project/auth/config.js:12.",
      "impact": "Credentials in source can leak through git history, public mirrors, logs, or build artifacts. Rotate any exposed values and move them to environment variables or a secrets manager.",
      "severity": "high",
      "type": "security",
    },
    {
      "description": "Use of eval/exec detected in 1 location: golden-project/server.js:8.",
      "impact": "Dynamic code execution becomes a remote code execution vulnerability if any user-controlled input can reach it. Replace with safer alternatives (e.g. JSON.parse, lookup tables, sandboxed evaluators).",
      "severity": "high",
      "type": "security",
    },
    {
      "description": "Plaintext HTTP URL found in 1 location: golden-project/api/client.js:22.",
      "impact": "HTTP traffic can be intercepted or modified by anything on the network path. Switch the affected endpoints to HTTPS.",
      "severity": "medium",
      "type": "security",
    },
  ],
  "modules": [
    {
      "files": 4,
      "name": "auth",
      "risk": "danger",
    },
    {
      "files": 4,
      "name": "api",
      "risk": "warn",
    },
  ],
  "projectName": "golden-project",
  "risk_score": 38,
  "simulation": [
    {
      "event": "System initialized.",
      "time": "T+0s",
      "type": "normal",
    },
    {
      "event": "Credential exposure risk active — hardcoded secrets remain reachable through source artifacts.",
      "time": "T+5m",
      "type": "warn",
    },
    {
      "event": "Dynamic code execution paths reachable — any input that flows here becomes an RCE surface.",
      "time": "T+10m",
      "type": "warn",
    },
    {
      "event": "Plaintext HTTP traffic in use — vulnerable to interception on untrusted networks.",
      "time": "T+15m",
      "type": "warn",
    },
  ],
  "stack": [
    "React",
    "Node.js",
  ],
  "summary": "Static analysis of golden-project (8 files, 50.0 KB) detected 3 risk signals (hardcoded_secret, dynamic_code_exec, insecure_http), indicating low deployment risk. Address the issues below before promoting this build.",
}
`;

exports[`generateDeterministicAnalysis snapshots > one-secret is unchanged 1`] = `
{
  "issues": [
    {
      "description": "Hardcoded credential detected in 1 location: golden-project/config.js:4.",
      "impact": "Credentials in source can leak through git history, public mirrors, logs, or build artifacts. Rotate any exposed values and move them to environment variables or a secrets manager.",
      "severity": "high",
      "type": "security",
    },
  ],
  "modules": [
    {
      "files": 8,
      "name": "golden-project",
      "risk": "danger",
    },
  ],
  "projectName": "golden-project",
  "risk_score": 15,
  "simulation": [
    {
      "event": "System initialized.",
      "time": "T+0s",
      "type": "normal",
    },
    {
      "event": "Credential exposure risk active — hardcoded secrets remain reachable through source artifacts.",
      "time": "T+5m",
      "type": "warn",
    },
  ],
  "stack": [
    "React",
    "Node.js",
  ],
  "summary": "Static analysis of golden-project (8 files, 50.0 KB) detected 1 risk signal (hardcoded_secret), indicating low deployment risk. Address the issues below before promoting this build.",
}
`;
